# hpc_pay_settlement_engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  settlement_engine.md
benches/: performance.rs
config/: default.toml
docker/backup/: backup.sh  crontab
docker/postgres/: init.sql
docker/redis/: redis.conf
k8s/: deployment.yaml
migrations/: 20240116000001_create_accounts.sql  20240116000002_create_settlement_batches.sql  20240116000003_create_transactions.sql  20240116000004_create_account_balances.sql  20240116000005_create_ledger_entries.sql  20240116000006_create_netting_positions.sql  20240116000007_create_idempotency_keys.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/accounting/: accounts.rs  balances.rs  double_entry.rs  mod.rs
src/api/: handlers.rs  mod.rs  requests.rs  responses.rs  routes.rs
src/cache/: balance_cache.rs  mod.rs
src/core/: batch.rs  engine.rs  ledger.rs  mod.rs
src/events/: consumer.rs  mod.rs  producer.rs  types.rs
src/idempotency/: handler.rs  key_generator.rs  mod.rs  storage.rs
src/models/: account.rs  account_balance.rs  currency.rs  ledger_entry.rs  mod.rs  netting_position.rs  settlement_batch.rs  transaction.rs
src/netting/: bilateral.rs  calculator.rs  mod.rs  multilateral.rs
src/observability/: health.rs  (+3 more)
tests/: api_tests.rs  batch_tests.rs  event_tests.rs  idempotency_tests.rs  ledger_tests.rs  netting_tests.rs  observability_tests.rs  performance_tests.rs  repository_tests.rs  service_tests.rs
(+17 files in other folders)
