[package]
name = "settlement_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "rust_decimal"] }
deadpool-postgres = "0.12"
redis = { version = "0.24", features = ["tokio-comp"] }
rskafka = "0.6.0"
rust_decimal = { version = "1.34", features = ["db-postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
dotenvy = "0.15"
reqwest = "0.11"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockall = "0.12"
rust_decimal_macros = "1.34"
tokio-test = "0.4"
